@@ -1,3 +1,8 @@
+2017-07-23  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/80569
+	* gcc.target/i386/pr80569.c: New test.
+
 2017-07-19  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	Back port from trunk
