@@ -1,3 +1,9 @@
+2017-07-23  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/80569
+	* config/i386/i386.c (ix86_option_override_internal): Disable
+	BMI, BMI2 and TBM instructions for -m16.
+
 2017-07-19  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	Back port from trunk
